# paladin

./: Cargo.toml  README.md
assets/prefab/: laser_impact.ron  small_explosion.ron
assets/texture/: bullet.ron  dark_ship_spritesheet.ron  force_field.ron  player_spritesheet.ron  pong_spritesheet.ron  ship_spritesheet.ron  thrust.ron
assets/ui/: credits.ron  menu.ron  pause_menu.ron  welcome.ron
config/: bindings.ron  display.ron
src/: audio.rs  main.rs  paladin.rs
src/components/: animation.rs  combat.rs  enemy.rs  laser.rs  menu.rs  mod.rs  physical.rs  ship.rs  thrust.rs  ui.rs
src/resources/: assets.rs  explosion.rs  mod.rs
src/states/: credits.rs  game.rs  menu.rs  mod.rs  pause.rs  utils.rs  welcome.rs
src/systems/: animation.rs  audio.rs  collision_system.rs  input.rs  laser.rs  mod.rs  move_laser.rs  physics.rs  ship_movement.rs  winner.rs
