[package]
name = "paladin"
version = "0.1.0"
authors = ["ToferC"]
edition = "2018"

[profile.dev] 
debug = 0 

[dependencies]
rand = "0.7.3"
smallvec = "0.6"
serde = "1.0.104"
specs-derive = "*"
log = "0.4.8"

[dependencies.amethyst]
version = "0.15.0"
features = ["vulkan", "no-slow-safety-checks"]
